# texera

./: .gitignore
core/SparkTexera/: .gitignore  README.md  config.yaml  pom.xml
core/api/: pom.xml
core/dataflow/: TexeraJooqConfiguration.xml  pom.xml
core/dataflow/jooqCodeGen/: TexeraJooqConfiguration.xml
core/gui/app/: app.module.ts
core/gui/app/operatorbar/: operator-bar.component.html
core/gui/app/services/: current-data-service.ts  mock-data.ts
core/new-gui/: .angular-cli.json  README.md  package-lock.json  package.json  server.js  styles.css  tslint.json
core/new-gui-dev/: package-lock.json
core/new-gui-dev/e2e/: app.e2e-spec.ts
core/new-gui-dev/src/: index.html  styles.css.map  styles.scss
core/new-gui-dev/src/app/: app.module.ts
core/new-gui/e2e/: app.e2e-spec.ts  app.po.ts
core/new-gui/src/: _variables.scss  index.html  styles.css  styles.scss
core/new-gui/src/app/: app-routing.module.ts  app.component.scss  (+2 more)
core/perftest/: pom.xml
core/sandbox/: pom.xml
core/sandbox/src/main/java/edu/uci/ics/texera/sandbox/CAFeval/dist_system_v3/: Agent.hpp  CMakeLists.txt  Manager.hpp  Worker.hpp  base.hpp  dist.cpp
core/sandbox/src/main/java/edu/uci/ics/texera/sandbox/CAFeval/dist_system_v3/stream_dist/: Manager.hpp  Worker.hpp  base.hpp  dist.cpp
core/sandbox/src/main/java/edu/uci/ics/texera/sandbox/CAFeval/hello_world_demo/: CMakeLists.txt  main.cpp  test.cpp  test2.cpp  test3.cpp
core/web/: pom.xml  sample-config.yml
textdb/textdb-exp/: pom.xml
textdb/textdb-perftest/: pom.xml
textdb/textdb-scripts/dashboard/: run_perftest.py
(+660 files in other folders)
